--- a/desafio/desafio012/style.css
+++ b/desafio/desafio012/style.css
@@ -1,31 +1,85 @@
-body{
-    margin: 0%;
+@charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Passion+One&family=Sriracha&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+html, body{
+    min-height: 100px;
+    background-color: darkgray;
+    font-family: 'Passion One', cursive;
 }
 header{
     background-color: black;
-    padding: 10px;
-    margin: auto
-    
-    
-}
-header > h1{
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    font-size: 3em;
-    min-width: 150px;
-    max-width: 700px;
-    margin: auto;
-    
-}
-header > p{
     color: white;
     text-align: center; 
-    
+    font-family: 'Kaushan Script', cursive;  
+}
+header > h1{
+    padding-top: 50px;
+    font-variant: small-caps;
+}
+header > p{
+    padding-bottom: 50px;
 }
 header > p > a{
     color: white;
+    font-weight: bolder;
+    text-decoration: none;
+}
+header > p > a:hover{
+    text-decoration: underline;
+    color: red;
 }
 section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+}
+section.normal{
+    background-color: white;
+    color: black;
+}
+section.imagem{
+    background-color: rgb(41, 39, 39);
+    color: white;
+}
+section.imagem > p{
+    background-color: rgba(0, 0, 0, 0.438);
+    width: 400px;
+}
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+footer{
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 10px;
+}
+footer > p > a{
+    color: white;
+    font-weight: bolder;
+    text-decoration: none;
+}
+footer > p > a:hover{
+    text-decoration: underline;
+    color: red;
 }
