--- a/desafio/desafio012/style.css
+++ b/desafio/desafio012/style.css
@@ -4,6 +4,12 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
 
+:root{
+    --fonte-titulo: 'Passion One', cursive;
+    --fonte-texto: 'Kaushan Script', cursive;
+    --fonte-padrao: Arial, Helvetica, sans-serif;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -12,7 +18,7 @@
 html, body{
     min-height: 100px;
     background-color: darkgray;
-    font-family: 'Passion One', cursive;
+    font-family: var(--fonte-titulo);
 }
 header{
     background-color: black;
@@ -23,6 +29,7 @@ header{
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 10vw;
 }
 header > p{
     padding-bottom: 50px;
@@ -41,6 +48,11 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-size: 5vw;
+    font-family: var(--fonte-texto);
+}
+section > p{
+    padding-bottom: 2em;
 }
 section.normal{
     background-color: white;
@@ -49,30 +61,32 @@ section.normal{
 section.imagem{
     background-color: rgb(41, 39, 39);
     color: white;
+    box-shadow: 4px 4px 20px 0px rgba(0, 0, 0, 0.534);
+   
 }
 section.imagem > p{
     background-color: rgba(0, 0, 0, 0.438);
     width: 400px;
+    padding: 5px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+section#img01{
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+section#img02{
+    background-image: url(imagens/background002.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+    
+}
 footer{
     background-color: black;
     color: white;
     text-align: center;
     padding: 10px;
+    font-family: var(--fonte-padrao);
 }
 footer > p > a{
     color: white;
