--- a/exercicio/Ex026/mq002/estilos/retrato.css
+++ b/exercicio/Ex026/mq002/estilos/retrato.css
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
 /* Aparelho em pé modo (portrat)*/
+
+body{
+    background-image: url(../imagens/cev-portrait.jpg);
+    background-position: center bottom;
+}
