colocando as img

--- a/exercicio/Ex026/mq004/estilos/style.css
+++ b/exercicio/Ex026/mq004/estilos/style.css
@@ -10,17 +10,37 @@
 }
 html{
     height: 100vh;
+    width: 100vw;
+}
+h1{
+    text-align: center;
+    color: white;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.616);
 }
 body{
     background: url(../imagens/back-phone.jpg);
-    background-position: center center;
-    background-size: cover;
     background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
 main{
-    background-color: white;
-    width: 400px;
+    background-color: rgba(255, 255, 255, 0.548);
+    width: 80vw;
     margin: auto;
     margin-top: 20px;
-    
+    border-radius: 10px;
+    padding: 10px;
 }
+img{
+    display: block;
+    margin: auto;
+}
+img#celular{display: block;}
+
+img#tablet{display: none;}
+
+img#impressora{display: none;}
+
+img#computador{display: none;}
+
+img#televisao{display: none;}
